# cbnai

./: README.md  pyproject.toml
src/cbning/: main.py  style.css
